--- a/app/src/main/res/layout/auth/layout/activity_register.xml
+++ b/app/src/main/res/layout/auth/layout/activity_register.xml
@@ -90,7 +90,7 @@
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
-
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginTop="20dp"
