--- a/app/src/main/res/layout/chat/layout/activity_chatroom_list.xml
+++ b/app/src/main/res/layout/chat/layout/activity_chatroom_list.xml
@@ -6,18 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".Chatroom_list">
 
-        <include layout="@layout/toolbar_back"/>
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_chaTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:padding="16dp"
             android:text="所有聊天對話"
             android:textSize="28sp"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:layout_marginStart="12dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
+        <ScrollView
+            android:id="@+id/scrollView2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_chaTitle">
+
+                <LinearLayout
+                    android:background="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+        </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
