--- a/app/src/main/res/layout/chat/layout/activity_chat.xml
+++ b/app/src/main/res/layout/chat/layout/activity_chat.xml
@@ -124,6 +124,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
@@ -154,6 +155,7 @@
         android:background="@drawable/background_chat_input">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/send"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
@@ -164,6 +166,7 @@
     </FrameLayout>
 
     <EditText
+        android:id="@+id/input"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
