--- a/app/src/main/res/layout/chat/layout/activity_chat.xml
+++ b/app/src/main/res/layout/chat/layout/activity_chat.xml
@@ -123,7 +123,7 @@
         app:layout_constraintTop_toBottomOf="@id/button_request"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -131,18 +131,20 @@
         android:orientation="vertical"
         android:overScrollMode="never"
         android:padding="20dp"
+        android:divider="@null"
 
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@+id/view_background"
-        app:layout_constraintTop_toBottomOf="@id/view_supporter"/>
+        app:layout_constraintTop_toBottomOf="@id/view_supporter"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
-    <ProgressBar
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:layout_constraintStart_toStartOf="@+id/view_background"
-        app:layout_constraintEnd_toEndOf="@+id/view_background"
-        app:layout_constraintTop_toTopOf="@+id/view_background"
-        app:layout_constraintBottom_toBottomOf="@+id/view_background"/>
+<!--    <ProgressBar-->
+<!--        android:layout_width="25dp"-->
+<!--        android:layout_height="25dp"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/view_background"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/view_background"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/view_background"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/view_background"/>-->
 
     <FrameLayout
         android:id="@+id/layout_send"
@@ -156,12 +158,12 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/send"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
             android:padding="8dp"
             android:src="@drawable/ic_send"
-            android:tint="@color/black"/>
+            android:tint="@color/black" />
 
     </FrameLayout>
 
