過好久都忘了有改啥

--- a/app/src/main/res/layout/add/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/add/layout/activity_add_post.xml
@@ -203,10 +203,10 @@
                         android:id="@+id/pUploadBtn"
                         android:layout_width="240dp"
                         android:layout_height="wrap_content"
-                       android:layout_gravity="center_horizontal"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginTop="28dp"
                         android:layout_marginBottom="20dp"
-                        android:background="@color/test02"
+                        android:background="@drawable/btn_shape_orange"
                         android:text="刊 登 !"
                         android:textColor="@color/white"
                         android:textSize="20sp"
