--- a/app/src/main/res/layout/me/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/me/layout/fragment_profile.xml
@@ -6,21 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileFragment"
-    android:padding="20dp">
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_height="0dp"
+        android:paddingHorizontal="16dp"
         >
-
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_straight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5013477" />
+            app:layout_constraintGuide_percent="0.5" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
@@ -36,23 +35,36 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.4" />
+
         <ImageView
             android:id="@+id/myphoto"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginHorizontal="20dp"
             tools:src="@tools:sample/avatars"
+            android:cropToPadding="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/guideline_straight"
             app:layout_constraintBottom_toBottomOf="@+id/guideline1"/>
 
+        <LinearLayout
+            android:id="@+id/me"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintStart_toEndOf="@+id/guideline_straight"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/myphoto"
+            app:layout_constraintBottom_toBottomOf="@id/myphoto">
+
         <TextView
             android:id="@+id/nameTv"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="小陳叔叔"
             android:textSize="24sp"
+            android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="@+id/myphoto"
             app:layout_constraintBottom_toTopOf="@id/star_all"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,87 +72,86 @@
 
         <LinearLayout
             android:id="@+id/star_all"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@id/guideline_straight"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameTv">
+            app:layout_constraintTop_toBottomOf="@+id/nameTv"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/star_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5.0" />
+                android:text="5.0"
+                android:textSize="18sp"
+                android:layout_marginEnd="8dp"/>
 
             <RatingBar
                 android:id="@+id/star"
-                style="?android:attr/ratingBarStyleSmall"
+                style="@style/Widget.AppCompat.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:isIndicator="true" />
+                android:isIndicator="true"
+                android:rating="5"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="( 5 )" />
+                android:text="（ 5 ）"
+                android:textSize="18sp"/>
         </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/point_all"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline_straight"
-            app:layout_constraintTop_toBottomOf="@+id/star_all"
-            app:layout_constraintBottom_toBottomOf="@+id/myphoto"
-            tools:ignore="UseCompoundDrawables">
 
             <TextView
                 android:id="@+id/point"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text=" 16200"
-                android:textSize="24sp"
-                app:drawableStartCompat="@drawable/coin" />
+                android:textSize="20sp"
+                app:drawableStartCompat="@drawable/coin"
+                />
 
-        </LinearLayout>
 
-        <TextView
-            android:id="@+id/success"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="12&#010;成功換取"
-            app:layout_constraintBottom_toBottomOf="@+id/fans"
-            app:layout_constraintEnd_toStartOf="@+id/fans"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/fans" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/fans"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="300&#010;粉絲"
-            app:layout_constraintLeft_toRightOf="@+id/success"
-            app:layout_constraintRight_toLeftOf="@id/follow"
-            app:layout_constraintTop_toBottomOf="@id/guideline1"
-            app:layout_constraintHorizontal_weight="1"/>
 
-        <TextView
-            android:id="@+id/follow"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="20&#010;關注中"
-            app:layout_constraintBottom_toBottomOf="@+id/fans"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/fans"
-            app:layout_constraintTop_toTopOf="@+id/fans" />
+<!--        <TextView-->
+<!--            android:id="@+id/success"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:text="12&#010;成功換取"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/fans"-->
+<!--            app:layout_constraintEnd_toStartOf="@+id/fans"-->
+<!--            app:layout_constraintHorizontal_weight="1"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/fans" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/fans"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:text="300&#010;粉絲"-->
+<!--            app:layout_constraintLeft_toRightOf="@+id/success"-->
+<!--            app:layout_constraintRight_toLeftOf="@id/follow"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/guideline1"-->
+<!--            app:layout_constraintHorizontal_weight="1"/>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/follow"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:text="20&#010;關注中"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/fans"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_weight="1"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/fans"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/fans" />-->
 
 
 
@@ -148,11 +159,11 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                app:tabTextColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.575"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/guideline2" />
+                app:layout_constraintTop_toBottomOf="@+id/guideline1" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/view_pager"
